# asr_tool

./: .gitignore  README.md  config.py  main.py  paths.py  pyproject.toml  qwen_asr.py
providers/: __init__.py  qwen_asr.py  whisper_asr.py
